[package]
name = "option"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
probability = "0.20.3"
assert_float_eq = "1.1.3"

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "katex.html",
]