[package]
name = "optiors"
version = "0.1.0"
edition = "2021"
authors = ["eight"]
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
probability = "0.20.3"
assert_float_eq = "1.1.3"
serde = { version = "1.0.152", features = ["derive"] }
katexit = "0.1.4"
typed-builder = "0.12.0"
chrono = {version="0.4.23", features = ["serde"]}
anyhow = "1.0.69"
paste = "1.0.11"
auto-impl-ops = "0.1.2"

